// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`articleContentConverter convert article that is a mix of inline and block object by wrapping the inline 1`] = `"<section><h2>Section 1</h2><aside data-type=\\"rightAside\\"><p>Some text that slate wants to delete </p><div><em>blabla</em></div></aside></section><section><h2>Section 2</h2></section><section><h2>Section 3</h2></section>"`;

exports[`articleContentConverter convert learningresource content 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "text": "Lorem ipsum",
        },
      ],
      "level": 2,
      "type": "heading",
    },
  ],
  "type": "section",
}
`;

exports[`articleContentConverter convert learningresource content to and from editorValue 1`] = `"<section><h2>Lorem ipsum</h2></section>"`;

exports[`articleContentConverter convert learningresource content with multiple sections to and from editorValue 1`] = `"<section><h2>Section 1</h2></section><section><h2>Section 2</h2></section><section><h2>Section 3</h2></section>"`;

exports[`articleContentConverter convert topic article content to and from editorValue 1`] = `"<section><h2>Lorem ipsum</h2></section>"`;

exports[`util/domOperations trippleNestedSections into array 1`] = `
Array [
  "<section>Seksjon 1</section>",
  "<section><p>test paragraf</p><section><section>Seksjon 2 nested</section></section></section>",
  "<section>Seksjon 3</section>",
]
`;

exports[`util/sectionSplitter splits doubleNestedSections into array 1`] = `
Array [
  "<section>Seksjon 1</section>",
  "<section><p>test paragraf</p><section>Seksjon 2 nested</section></section>",
]
`;
